deploy/calculator-back/calculator-back-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-back-ingress
  namespace: app-back  # Неймспейс, в котором находится сервис бэкенда
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # nginx.ingress.kubernetes.io/rewrite-target: /  # Это аннотация для корректного переписывания пути
spec:
  tls:
  - hosts:
    - dmitriy2028.site
    secretName: my-cert-secret
  rules:
    - host: test.dmitriy2028.site  # Ваш домен
      http:
        paths:
          - path: /api/calculator/(.*)  # Перехватываем все пути, начинающиеся с /api/calculator/
            pathType: ImplementationSpecific
            backend:
              service:
                name: calculator-back-service  # Имя вашего сервиса бэкенда
                port:
                  number: 8080  # Порт сервиса бэкенда
